syntax = "proto3";

package intellistart.interviewplanning.request.slot.update.proto;

option java_multiple_files = true;

import "intellistart/interviewplanning/commonmodels/slot/slot.proto";

message UpdateSlotRequest {
  string slotId = 1;
  commonmodels.slot.SlotProto slotProto = 2;
  string email = 3;
}

message UpdateSlotResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    commonmodels.slot.SlotProto slotProto = 1;
  }

  message Failure {
    string errorCode = 100;
    string errorMessage = 101;
  }
}
